--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
-        // TODO (1) Make a new Firebase project in the Firebase Console and follow the instructions.
+        // COMPLETED (1) Make a new Firebase project in the Firebase Console and follow the instructions.
         // The console is here: https://console.firebase.google.com/
 
-        // TODO (2) Add Google Services plugin here
+        // COMPLETED (2) Add Google Services plugin here
+        classpath 'com.google.gms:google-services:3.1.1' // google-services plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +23,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
 
