--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
 
     // Schematic dependencies for ContentProvider
-    apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
-    compile 'net.simonvt.schematic:schematic:0.6.3'
+    apt 'net.simonvt.schematic:schematic-compiler:0.7.0'
+    annotationProcessor 'net.simonvt.schematic:schematic-compiler:0.7.0'
+    compile 'net.simonvt.schematic:schematic:0.7.0'
 
     // Preferences Dependencies
     compile 'com.android.support:preference-v7:25.2.0'
@@ -43,5 +44,8 @@ dependencies {
     // to send a notification to your app using the Firebase console. The app must be in the
     // background!
     compile 'com.google.firebase:firebase-messaging:11.8.0'
-    apply plugin: 'com.google.gms.google-services'
 }
+sourceSets {
+    main.java.srcDirs += 'build/source/apt/{buildType}'
+}
+apply plugin: 'com.google.gms.google-services'
