--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
 
     // Schematic dependencies for ContentProvider
-    apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
-    compile 'net.simonvt.schematic:schematic:0.6.3'
+    apt 'net.simonvt.schematic:schematic-compiler:0.7.0'
+    annotationProcessor 'net.simonvt.schematic:schematic-compiler:0.7.0'
+    compile 'net.simonvt.schematic:schematic:0.7.0'
 
     // Preferences Dependencies
     compile 'com.android.support:preference-v7:25.1.0'
@@ -44,3 +45,6 @@ dependencies {
 // Apply the Google Services plugin. Make sure to add the google-services.json file in the app
 // folder. You download it from the Firebase console
 apply plugin: 'com.google.gms.google-services'
+sourceSets {
+    main.java.srcDirs += 'build/source/apt/{buildType}'
+}
