--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,13 @@
             </intent-filter>
         </service>
 
-        <!-- TODO (4) Add your new service here, with an intent filter for action
+        <!-- COMPLETED (4) Add your new service here, with an intent filter for action
         com.google.firebase.MESSAGING_EVENT -->
-
+        <service android:name=".fcm.SquawkFirebaseMessageService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
